# ai-dev-tools-zoomcamp_homework

./: .gitignore  README.md
01-overview/django-todo/: .gitignore  README.md
01-overview/django-todo/backend/: db.sqlite3
01-overview/django-todo/backend/django_todo/: asgi.py  settings.py  urls.py  wsgi.py
01-overview/django-todo/backend/tasks/: forms.py  models.py  urls.py  views.py
01-overview/django-todo/backend/tasks/migrations/: 0001_initial.py
01-overview/django-todo/backend/templates/: base.html
01_overview/django-todo/backend/tasks/: admin.py  tests.py
02-end-to-end/online-coding-interviews/: Dockerfile  README.md  docker-compose.yml  render.yaml
02-end-to-end/online-coding-interviews/.github/workflows/: ci.yml
02-end-to-end/online-coding-interviews/backend/: openapi.yaml  pyproject.toml  rooms.db
02-end-to-end/online-coding-interviews/backend/app/: main.py
02-end-to-end/online-coding-interviews/backend/app/api/: routes.py
02-end-to-end/online-coding-interviews/backend/app/db/: mock_db.py  session.py
02-end-to-end/online-coding-interviews/backend/app/models/: database.py
02-end-to-end/online-coding-interviews/backend/app/services/: exec_service.py  room_service.py
02-end-to-end/online-coding-interviews/backend/tests/: test_rooms.py  test_services.py
02-end-to-end/online-coding-interviews/backend/tests_integration/: test_api.py  test_ws.py
02-end-to-end/online-coding-interviews/frontend/: README.md  index.html  tailwind.config.ts  vitest.config.ts
02-end-to-end/online-coding-interviews/frontend/src/: App.tsx  index.css  main.tsx
(+28 files in other folders)
